# GDvi

./: .gitignore  CMakeLists.save  CMakeLists.txt  README.md  make.sh
.git_save/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_save/logs/: HEAD
.git_save/logs/refs/heads/: main
.git_save/logs/refs/remotes/origin/: main
.git_save/refs/remotes/origin/: main
apps/: CMakeLists.txt
apps/a0_hello_world/src/: main.c
apps/a1_hello_world/: CMakeLists.txt
apps/a1_hello_world/src/: main.c
apps/a1_screensaver/: CMakeLists.txt  make.sh
apps/a1_screensaver/src/: main.c
apps/b1_palette_2/: CMakeLists.txt
apps/b1_palette_2/src/: main.c
apps/b2_palette_4/: CMakeLists.txt
apps/b2_palette_4/src/: main.c
apps/b3_palette_8/: CMakeLists.txt
apps/b3_palette_8/src/: main.c
libs/: CMakeLists.txt
libs/bitwise/: CMakeLists.txt  bitwise.c  bitwise.h  fatbitwise.c  fatbitwise.h
libs/gdvi/: gdvi.c  gdvi.h
libs/gfx/: gfx.c  gfx.h  ls7447.c  ls7447.h
